commit added margin on top of first img

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <h1>SCROLL DOWN</h1>
     <main class="main-content">
-        <img class="hand" src="avatars/lonely-dev.png">
+        <img style="margin-top: 100px;" class="hand" src="avatars/lonely-dev.png">
         <h2>Recently I have been putting all my efforts and energies into learning animations with GSAP3</h2>
         <div class="trigger"></div>
         <img class="jason" src="avatars/laughing-crying.png">
@@ -36,6 +36,11 @@
         <svg class="svg">
 
         </svg>
+        <div style="background-color: aliceblue;">
+            <svg width="500" height="600" xmlns="http://www.w3.org/2000/svg">
+                <path class="curve" d="M 50 160 C 80 20, 130 20, 190 80 S 300 300, 360 160" stroke="red" fill="red"/>
+              </svg>
+        </div>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous"></script>
