commit for new project import imgs and new gsap for projects

--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <nav class="nav">
         <img class="logo" src="assets/logo_1.png">
         <ul class="ul">
-            <li class="li">HOME</li>
-            <li class="li">PROJECTS</li>
-            <li class="li">ABOUT</li>
+            <li id="home" class="li">HOME</li>
+            <li id="projects" class="li">PROJECTS</li>
+            <li id="about" class="li">ABOUT</li>
         </ul>
     </nav>
     <h1>SCROLL DOWN</h1>
     <main class="main-content">
 
         <img style="margin-top: 100px;" class="hand" src="avatars/lonely-dev.png">
+        <h1>JASON NUTT</h1>
         <div class="trigger"></div>
         <h2>Recently I have been putting all my efforts and energies into learning animations with GSAP3</h2>
 
@@ -34,21 +35,38 @@
 
 
     </aside>
-    <footer>
-        <svg class="svg">
 
+    <article>
+        <div id="stefanos">
+            <img src="images/stefanos.png">
+        </div>
+
+        <div id="stefanos">
+            <img src="images/word_game.png">
+        </div>
+
+        <div id="stefanos">
+            <img src="images/TodoList.png">
+        </div>
+    </article>
+    <footer>
+
+        <svg class="svg">
+            
         </svg>
         <div style="background-color: aliceblue;">
             <svg width="500" height="600" xmlns="http://www.w3.org/2000/svg">
                 <path class="curve" d="M 50 160 C 80 20, 130 20, 190 80 S 300 300, 360 160" stroke="red" fill="red"/>
               </svg>
         </div>
+
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/Draggable.min.js" integrity="sha512-K5lS5qToD89PSx3gJnHO4H7ZtHTM+lDphSr1sBzBJt0FpLXb7JYI8EtW1cAhhMDTLhf8hc9afgEJrj38JJb52A==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js" integrity="sha512-Q+G390ZU2qKo+e4q+kVcJknwfGjKJOdyu5mVMcR95NqL6XaF4lY4nsSvIVB3NDP54ACsS9rqhE1DVqgpApl//Q==" crossorigin="anonymous"></script>
     <script src="gsap.js"></script>
+    <script src="projects.js"></script>
 </body>
 
 </html>
