commit for new black bg

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
     <main class="main-content">
 
         <img style="margin-top: 100px;" class="hand" src="avatars/lonely-dev.png">
-        <h1>JASON NUTT</h1>
-        <div class="trigger"></div>
+        <div class="trigger">
+            <h1 style="color: blue">JASON NUTT</h1>
+        </div>
+
         <h2>Recently I have been putting all my efforts and energies into learning animations with GSAP3</h2>
 
         <img class="jason" src="avatars/laughing-crying.png">
