commit with correct padding and margin for mobile

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
 
     </aside>
-
+    <div class="MyProjects">
+    </div>
     <article>
         <div id="stefanos">
             <img src="images/stefanos.png">
